--- a/vercel.json
+++ b/vercel.json
@@ -1,5 +1,7 @@
 {
   "rewrites": [
-    { "source": "/api/prices", "destination": "/api/prices.js" }
+    { "source": "/api/prices", "destination": "/api/prices.js" },
+    { "source": "/api/news", "destination": "/api/news.js" },
+    { "source": "/api/agent-log", "destination": "/api/agent-log.js" }
   ]
 }
