fix: disable Next.js detection in vercel.json

--- a/vercel.json
+++ b/vercel.json
@@ -1,4 +1,6 @@
 {
+  "buildCommand": null,
+  "framework": null,
   "rewrites": [
     { "source": "/api/prices", "destination": "/api/prices.js" },
     { "source": "/api/news", "destination": "/api/news.js" },
