feat: dynamic status badge with activity tracking
- Add /api/status endpoint (gateway health + last message activity)
- Status badge shows: active, thinking, idle, resting, offline
- Updates every 15s
- One-word activity based on session freshness
- Green online ring when API has credits

--- a/vercel.json
+++ b/vercel.json
@@ -4,6 +4,7 @@
   "rewrites": [
     { "source": "/api/prices", "destination": "/api/prices.js" },
     { "source": "/api/news", "destination": "/api/news.js" },
-    { "source": "/api/agent-log", "destination": "/api/agent-log.js" }
+    { "source": "/api/agent-log", "destination": "/api/agent-log.js" },
+    { "source": "/api/status", "destination": "/api/status.js" }
   ]
 }
